Fix: overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  overflow-x: hidden;
+}
+
 .main {
   width: 100vw;
   min-height: 100vh;
@@ -12,7 +16,7 @@
   pointer-events: none;
 }
 .main:before {
-  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, hsla(0, 0%, 9%, 0.5) 100%);
+  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, hsla(0, 0%, 9%, 0.5) 50%);
   position: absolute;
   content: "";
   z-index: 2;
@@ -42,12 +46,12 @@
       hsla(215, 98%, 61%, 1) 0px,
       transparent 20%
     ),
-    radial-gradient(at 97% 21%, rgb(32, 151, 255) 0px, transparent 50%),
-    radial-gradient(at 52% 99%, rgb(10, 101, 185) 0px, transparent 50%),
-    radial-gradient(at 10% 29%, hsla(208, 96%, 67%, 1) 0px, transparent 50%),
-    radial-gradient(at 97% 96%, hsla(208, 60%, 74%, 1) 0px, transparent 50%),
-    radial-gradient(at 33% 50%, rgb(25, 125, 212) 0px, transparent 50%),
-    radial-gradient(at 79% 53%, hsla(209, 68%, 79%, 1) 0px, transparent 50%);
+    radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
+    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
+    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
+    radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
+    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
+    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
   position: absolute;
   content: "";
   width: 100%;
@@ -57,14 +61,33 @@
   opacity: 0.15;
 }
 
-@media screen and (max-width: 640px) {
-  .content {
-    display: none;
+@keyframes gradientCycle {
+  0% { background-position: 0%; }
+  100% { background-position: 100%; }
+}
+
+.text-animation {
+  background: linear-gradient(to right, hsla(234, 86%, 63%, 1), hsla(293, 86%, 63%, 1), hsla(27, 86%, 63%, 1), hsla(65, 86%, 63%, 1), hsla(107, 86%, 63%, 1), hsla(168, 86%, 63%, 1), hsla(234, 86%, 63%, 1));
+  background-size: 600% auto;
+  animation: gradientCycle 10s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@keyframes underline-animation {
+  0% {
+    width: 0;
+    transform-origin: left;
+  }
+  100% {
+    width: 100%;
+    transform-origin: right;
   }
 }
 
-@layer base {
-  ::-webkit-scrollbar {
-    @apply w-0;
+
+@media screen and (max-width: 640px) {
+  .content {
+    display: none;
   }
 }
